<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Txt1"
        android:layout_width="match_parent"
        android:layout_height="28dp"
        android:layout_gravity="center"
        android:text="@string/lista_de_compras"/>

    <ImageView
        android:id="@+id/mercadin"
        android:layout_width="166dp"
        android:layout_height="182dp"
        android:layout_gravity="center"
        android:src="@drawable/shop">

    </ImageView>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/arrozrs18_00" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/feijaors12_00"/>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/açucarrs6_50" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/macarraors4_50" />

    <CheckBox
        android:id="@+id/checkBox5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/leiters5_50" />

    <CheckBox
        android:id="@+id/checkBox6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/biscoitors2_50" />

    <CheckBox
        android:id="@+id/checkBox7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fandangosrs3_20" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="48dp"
       android:backgroundTint="#FF03DAC5"
        android:text="@string/total" />


</LinearLayout>